[project]
name = "monthly-candles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gijs Smit" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.20.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
