[project]
name = "monthly-candles"
version = "0.1.0"
description = "A simple Python library to download monthly OHLCV data from Binance"
readme = "README.md"
authors = [
    { name = "Gijs Smit" }
]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.20.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
